feat(leetcode):  387 ok [optional body] Runtime: 17 ms, faster than 93% of TypeScript online submissions for First Unique Character in a String.
Memory Usage: 59.3 MB, less than 13% of TypeScript First Unique Character in a String.

--- a/leetcode/todo/387.md
+++ b/leetcode/todo/387.md
@@ -1,5 +1,7 @@
-- [ ] 重複していない文字列のindexを返す
-- [ ] 全て重複していれば-1
+- [x] 文字列を分解して配列にする
+- [x] リストをループして重複を探す
+- [x] 重複していない最初の文字のindexを返す
+- [x] 全て重複していれば-1
 
  Category: algorithms
  Level: Easy
