--- a/leetcode/todo/703.md
+++ b/leetcode/todo/703.md
@@ -2,6 +2,8 @@
  Level: Easy
  Percent: 59.46911%
 
+最初の数字の順位の番号を返す問題。
+どんどん追加されていくのでそれを都度ソートする
  You are part of a university admissions office and need to keep track of the kth highest test score from applicants in real-time. This helps to determine cut-off marks for interviews and admissions dynamically as new applicants submit their scores.
 
  You are tasked to implement a class which, for a given integer k, maintains a stream of test scores and continuously returns the kth highest test score after a new score has been submitted. More specifically, we are looking for the kth highest score in the sorted list of all scores.
